# finally

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude-plugin/: marketplace.json
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
backend/: market_data_demo.py  pyproject.toml
backend/app/: main.py  static_files.py
backend/app/api/: chat.py  portfolio.py  schemas.py  watchlist.py
backend/app/db/: database.py  repository.py
backend/app/llm/: __init__.py  client.py  mock.py  prompt.py  schema.py  service.py
backend/app/market/: __init__.py  base.py  cache.py  factory.py  massive.py  sim_config.py  simulator.py  stream.py  types.py
backend/app/services/: portfolio.py  watchlist.py
backend/db/: schema.sql
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_chat_api.py  test_main_wiring.py  test_portfolio_api.py  test_watchlist_api.py
backend/tests/db/: conftest.py  test_database.py  test_repository.py
backend/tests/llm/: conftest.py  test_mock.py  test_prompt.py  test_schema.py  test_service.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_simulator.py  test_simulator_source.py  test_stream.py  test_types.py
backend/tests/services/: conftest.py  test_portfolio.py  test_watchlist.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
planning/: BUILD_CONTRACT.md  MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  PLAN.md  (+5 more)
(+397 files in other folders)
